--- a/styles.css
+++ b/styles.css
@@ -3,16 +3,16 @@
 	margin:0px;
 	padding:0px;
 }
-.head{
+
+header{
 	position:fixed;
 	top:0px;
 	background-color:#011e29;
 	color:white;
 	width:100%;
 	height:60px;
-	display:flex;
-	align-items:center;
-	justify-content:center;
+	text-align:center;
+	padding:10px;
 }
 .head h1{
 	font-size:28px;
@@ -23,7 +23,7 @@
 	background-color:#f5f5f5;
 	height:400px;
 }
-.child1{
+.latest-news-section{
 	display:flex;
 	flex-direction:column;
 	flex:1;
@@ -54,10 +54,10 @@
 	justify-content:space-evenly;
 	font-size:12px;
 }
-.child3 img{
+.pictorial-news-section img{
 	width:150px;
 }
-.child3{
+.pictorial-news-section {
 	display:flex;
 	flex-direction:column;
 	align-items:center;
