--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ header{
 	display:flex;
 	flex-direction:column;
 	flex:1;
-	margin:5px;
+	margin:20px;
 	margin-right:2px;
 	background-color:white;
 	border-radius:20px;
@@ -38,11 +38,9 @@ header{
 	justify-content:space-evenly;
 }
 .child2{
-	display:flex;
-	flex-direction:column;
+    text-align:center;
 	flex:1;
-	margin-top:100px;
-	margin:5px;
+	margin:20px;
 	margin-left:1px;
 	margin-right:1px;
 	background-color:white;
@@ -50,20 +48,20 @@ header{
 	height:300px;
 	padding:10px;
 	width:540px;
-	align-items:center;
-	justify-content:space-evenly;
-	font-size:12px;
+	
+	font-size:8px;
 }
 .pictorial-news-section img{
 	width:150px;
 }
 .pictorial-news-section {
-	display:flex;
+/* 	display:flex;
 	flex-direction:column;
 	align-items:center;
-	justify-content:space-evenly;
+	justify-content:space-evenly; */
 	background-color:white;
-	margin:5px;
+	margin:20px;
+	text-align:center;
 	margin-left:1px;
 	padding:20px;
 	height:300px;
